Work in progress changes for review, includes Case flags link, facilities list, Welsh region conditional change and attendance changes

--- a/app/views/hearings/pages/casedetailsdivorce.html
+++ b/app/views/hearings/pages/casedetailsdivorce.html
@@ -124,7 +124,7 @@ Case details
                                     {% if data.justsubmitted == 'true' %}
                                         <tr class="govuk-table__row">
                                                 <td scope="row" class="govuk-table__cell" style="width:200px;">Submitted but not yet processed</td>
-                                                <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=false&changesallowed=false&viewingconfirmedhearing=false&afterhearinghappend=false&">View details</a></td>
+                                                <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=false&changesallowed=true&viewingconfirmedhearing=false&afterhearinghappend=false&">View and change</a></td>
                                                 <td class="govuk-table__cell" style="text-align: right;"><a href="confirmcancel">Cancel hearing</a></td>
                                         </tr>
                                     {%  endif  %}
