--- a/app/views/hearings/pages/paneldifferent.html
+++ b/app/views/hearings/pages/paneldifferent.html
@@ -97,8 +97,6 @@ Case details
                                                     </fieldset>
                                                 </div>
 
-
-
                                                 <div class="govuk-form-group">
                                                     <br>
                                                     <fieldset class="govuk-fieldset">
@@ -107,45 +105,45 @@ Case details
                                                         </legend>
                                                         <div class="govuk-radios">
                                                             <div class="govuk-radios__item">
-                                                                <input class="govuk-radios__input" id="judgeticketed1" name="judgeticketedlevel" type="radio" value="All" checked  >
+                                                                <input class="govuk-radios__input" id="judgeticketed1" name="judgeticketedlevel" type="radio" value="01 - Social Security" checked  >
                                                                 <label class="govuk-label govuk-radios__label" for="judgeticketed1">
-                                                                    01
+                                                                    01 - Social Security
                                                                 </label>
                                                             </div>
                                                             <div class="govuk-radios__item">
-                                                                <input class="govuk-radios__input" id="judgeticketed2" name="judgeticketedlevel" type="radio" value="Tribunal Judge - salaried"   >
+                                                                <input class="govuk-radios__input" id="judgeticketed2" name="judgeticketedlevel" type="radio" value="02 - Child Support"   >
                                                                 <label class="govuk-label govuk-radios__label" for="judgeticketed2">
-                                                                    02
+                                                                    02 - Child Support
                                                                 </label>
                                                             </div>
                                                             <div class="govuk-radios__item">
-                                                                <input class="govuk-radios__input" id="judgeticketed3" name="judgeticketedlevel" type="radio" value="Tribunal Judge - fee-paid"  >
+                                                                <input class="govuk-radios__input" id="judgeticketed3" name="judgeticketedlevel" type="radio" value="03 - Disability Living Allowance"  >
                                                                 <label class="govuk-label govuk-radios__label" for="judgeticketed3">
-                                                                    03
+                                                                    03 - Disability Living Allowance
                                                                 </label>
                                                             </div>
                                                             <div class="govuk-radios__item">
-                                                                <input class="govuk-radios__input" id="judgeticketed4" name="judgeticketedlevel" type="radio" value="Regional Tribunal Judge"  >
+                                                                <input class="govuk-radios__input" id="judgeticketed4" name="judgeticketedlevel" type="radio" value="04 - Incapacity Benefit Employment Support"  >
                                                                 <label class="govuk-label govuk-radios__label" for="judgeticketed4">
-                                                                    04
+                                                                    04 - Incapacity Benefit Employment Support
                                                                 </label>
                                                             </div>
                                                             <div class="govuk-radios__item">
-                                                                <input class="govuk-radios__input" id="judgeticketed5" name="judgeticketedlevel" type="radio" value="Tribunal Judge - salaried"   >
+                                                                <input class="govuk-radios__input" id="judgeticketed5" name="judgeticketedlevel" type="radio" value="05 - Industrial Injuries - one specialist member"   >
                                                                 <label class="govuk-label govuk-radios__label" for="judgeticketed5">
-                                                                    05
+                                                                    05 - Industrial Injuries - one specialist member
                                                                 </label>
                                                             </div>
                                                             <div class="govuk-radios__item">
-                                                                <input class="govuk-radios__input" id="judgeticketed6" name="judgeticketedlevel" type="radio" value="Tribunal Judge - fee-paid"  >
+                                                                <input class="govuk-radios__input" id="judgeticketed6" name="judgeticketedlevel" type="radio" value="06 - Industrial Injuries - two specialist members"  >
                                                                 <label class="govuk-label govuk-radios__label" for="judgeticketed3">
-                                                                    06
+                                                                    06 - Industrial Injuries - two specialist members
                                                                 </label>
                                                             </div>
                                                             <div class="govuk-radios__item">
-                                                                <input class="govuk-radios__input" id="judgeticketed7" name="judgeticketedlevel" type="radio" value="Regional Tribunal Judge"  >
+                                                                <input class="govuk-radios__input" id="judgeticketed7" name="judgeticketedlevel" type="radio" value="07 - Vaccine Damage"  >
                                                                 <label class="govuk-label govuk-radios__label" for="judgeticketed7">
-                                                                    ???
+                                                                    07 - Vaccine Damage
                                                                 </label>
                                                             </div>
                                                         </div>
